--- a/public/index.html
+++ b/public/index.html
@@ -19,6 +19,7 @@
 
     <!-- Styles -->
     <link rel="stylesheet" href="/css/styles.css" />
+    <link rel="stylesheet" href="/css/components.css" />
   </head>
   <body>
     <!-- Alert Container -->
@@ -192,6 +193,7 @@
     </div>
 
     <!-- Scripts -->
+    <script src="/js/toast.js"></script>
     <script src="/js/device.js"></script>
     <script src="/js/app.js"></script>
   </body>
