--- a/public/index.html
+++ b/public/index.html
@@ -193,6 +193,7 @@
     </div>
 
     <!-- Scripts -->
+    <script src="https://cdn.socket.io/4.5.4/socket.io.min.js"></script>
     <script src="/js/toast.js"></script>
     <script src="/js/device.js"></script>
     <script src="/js/app.js"></script>
